Fix Quattro button hover color in dark mode

--- a/themes/quattro.css
+++ b/themes/quattro.css
@@ -366,7 +366,7 @@
   :root {
     --bc-button--hover: ;
     --sd-button--hover: ;
-    --co-button--hover: ;
+    --co-button--hover: var(--cl-red-500);
   }
 }
 
